--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -11,9 +11,10 @@
         }
     </style>
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
-    <h1 class="titulo1"></h1>
+    <h1 class="titulo1">titulo de prueba</h1>
     <div style="style.css" ></div>
 
     
