ejercicio de imputs terminado

--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1 class="titulo1">titulo de prueba</h1>
-    <div style="style.css" ></div>
+    <div style="Style.css" ></div>
 
     
 </body>
