ejercicio text-aling terminado

--- a/ejericio_text-aling.html
+++ b/ejericio_text-aling.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="text-aling.css">
 </head>
 <body>
-    <div>Text</div>
-    <div>Text</div>
-    <div>Text</div>
+    <div class="principal">
+    <div class="box box1">Text</div>
+    <div class="box box2">Text</div>
+    <div class="box box3">Text</div>
+    </div>
+    
     
 </body>
 </html>
