--- a/rgb/rgb.html
+++ b/rgb/rgb.html
@@ -38,16 +38,16 @@
             <p>=</p>
             <div class="colores amarillo"></div>
         </div>
-
-        <h1>RGB</h1>
-
-
-        <div class="graph">
-            <div class="rgb rojo rojo2"></div>
-            <div class="rgb verde verde2"></div>
-            <div class="rgb azul azul2"></div>
-        
+        <div class="rgb-titulo"></div>
+            <h1>RGB</h1>
         </div>
+
+    <div class="graph">
+        <div class="rgb rojo rojo2"></div>
+        <div class="rgb verde verde2"></div>
+        <div class="rgb azul azul2"></div>
+
+    </div>
     </div>
 
 
