ejercicio querys mejorado y casi hecho

--- a/querys/querys.html
+++ b/querys/querys.html
@@ -10,21 +10,25 @@
 
 <body>
     <main>
-        <div class="container-1">
-            <div class="orange orange-1"></div>
-            <div class="orange orange-2"></div>
+        <div class=" container container-1">
+            <div></div>
+            <div></div>
         </div>
-        <div class="container-2">
-            <div class="divs azul"></div>
-            <div class="divs azul"></div>
-            <div class="divs azul"></div>
+        <div class="container container-2">
+            <div></div>
         </div>
 
-        <div class="container-3">
-            <div class="divs gris"></div>
-            <div class="divs gris"></div>
-            <div class="divs gris"></div>
-            <div class="divs gris"></div>
+        <div class="container container-3">
+            <div ></div>
+            <div ></div>
+            <div ></div>
+        </div>
+
+        <div class="container container-4">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </main>
 </body>
