ejercicio spoty acabado

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -67,8 +67,9 @@
         </div>
         <div class="cantante">
             <div class="textos-cantante">
-                <h2>It's as yeezy as Kanye West.</h2>
-                <p>Search Know what you want to listen to? <br> Just search and hit play.</p>
+                <h1>It's as yeezy as Kanye West.</h1><br>
+                <h2>Search</h2>
+                <p>Know what you want to listen to? <br> Just search and hit play.</p>
                 <h2>Browse</h2>
                 <p>Check out the latest charts,<br> brand new releases and great playlists for right now.</p>
                 <h2>Discover</h2>
